@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2010 Hauke Hain <hhpreuss@googlemail.com>
+*  (c) 2010-2011 Hauke Hain <hhpreuss@googlemail.com>
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
